[Fullscreen Control] Integrate with MacViews

This CL integrates the FullscreenControlHost with the MacViews toolkit
so that keyboard lock can use it as the visual feedback for
press-and-hold ESC to exit fullscreen.

Bug: 839530
Change-Id: I0d8792114840b039ce72ec4a755bdf1fc887d723
Reviewed-on: https://chromium-review.googlesource.com/1050930
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557373}
Former-commit-id: 9d0fab63c914bdb0536ef0b7b4d7b16e9ecb2c63